--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,14 @@
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
+    "pg": "^8.16.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^24.8.1",
     "prisma": "^5.20.0",
     "tsx": "^4.19.0",
     "typescript": "^5.6.3"
