--- a/backend/package.json
+++ b/backend/package.json
@@ -16,15 +16,17 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "innovation-centre": "file:..",
     "morgan": "^1.10.0",
     "pg": "^8.16.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/morgan": "^1.9.10",
-    "@types/node": "^24.8.1",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.6",
+    "@types/node": "^20.14.10",
+    "@types/pg": "^8.10.2",
     "prisma": "^5.20.0",
     "tsx": "^4.19.0",
     "typescript": "^5.6.3"
