--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc && prisma generate",
+    "build": "tsc -p tsconfig.json && prisma generate",
     "start": "node dist/server.js",
     "prisma:push": "prisma db push",
     "prisma:studio": "prisma studio"
@@ -16,7 +16,6 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
-    "innovation-centre": "file:..",
     "morgan": "^1.10.0",
     "pg": "^8.16.3",
     "zod": "^3.23.8"
