--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "ES2022",
+    "target": "ES2020",
+    "module": "CommonJS",
     "moduleResolution": "Node",
-    "outDir": "dist",
     "rootDir": "src",
+    "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "types": ["node"] 
+    "types": ["node"]
   },
   "include": ["src"]
 }
